Update to Async/Await

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,19 @@
 {
+    "presets": [
+    ["env", {
+    "targets": {
+    "node": "0.12"
+    }
+    }]
+    ],
     "compact": false,
-    "presets": ["es2015"],
-    "auxiliaryCommentBefore": "istanbul ignore next",
-    "sourceMaps": "inline"
+    "sourceMaps": "inline",
+    "plugins": [
+    "transform-async-to-bluebird",
+    "transform-promise-to-bluebird",
+    ["transform-runtime", {
+    "polyfill": false,
+    "regenerator": true
+    }]
+    ]
 }
