--- a/package.json
+++ b/package.json
@@ -37,18 +37,24 @@
     "cibuild": "npm run build"
   },
   "dependencies": {
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.6.0",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.15.2",
+    "chai-as-promised": "^7.1.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "request": "^2.73.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
     "chai": "^3.5.0",
     "eslint": "^3.3.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-async-to-bluebird": "^1.1.1",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0"
   },
   "engines": {
     "node": ">=6.9.1",
